# nvblox

./: .clang-format  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile.build  Dockerfile.deps  Dockerfile.test  Jenkinsfile  LICENSE  README.md  blossom-development.jenkinsfile  blossom-nightly.jenkinsfile
nvblox/: CMakeLists.txt
nvblox/cmake/: Config.cmake.in  setup_compilers.cmake
nvblox/evaluation/: README.md  requirements.txt  setup.py
nvblox/evaluation/nvblox_evaluation/compare_branch_timings/: compare_branch_timings.py
nvblox/evaluation/nvblox_evaluation/evaluation_utils/: esdf_evaluation.py  parse_nvblox_timing.py  quad_mesh.py  voxel_grid.py
nvblox/evaluation/nvblox_evaluation/replica_reconstruction_evaluation/: README.md  replica.py  replica_esdf_evaluation.py  replica_reconstruction.py  replica_surface_evaluation.py
nvblox/evaluation/replica/: replica.py  replica_esdf_evaluation.py  replica_reconstruction.py  replica_surface_evaluation.py  timing.py
nvblox/evaluation/replica/evaluation_utils/: esdf_evaluation.py  quad_mesh.py  surface_evaluation.py  voxel_grid.py
nvblox/examples/: CMakeLists.txt
nvblox/examples/python/: 3dmatch_example.py
nvblox/examples/src/: esdf_query.cu  load_map_and_mesh.cpp
nvblox/executables/: CMakeLists.txt
nvblox/executables/src/: benchmark.cpp  fuse_3dmatch.cpp  fuse_fusionportable.cpp  fuse_kitti.cpp  fuse_redwood.cpp  fuse_replica.cpp  fuser.cpp  fuser_lidar.cpp  fuser_rgbd.cpp
nvblox/executables/src/datasets/: 3dmatch.cpp  fusionportable.cpp  image_loader.cpp  kitti.cpp  redwood.cpp  replica.cpp
nvblox/experiments/: .gitignore  CMakeLists.txt  README.md
nvblox/experiments/experiments/compare_branches/: CMakeLists.txt  compare_branches.py  plot_comparison.py
nvblox/experiments/experiments/isolate_tsdf_block_update/: CMakeLists.txt  main.cpp
nvblox/experiments/experiments/layer_cake_interface/: CMakeLists.txt  main_dynamic.cpp  main_static.cpp  main_type_erasure.cpp
nvblox/experiments/experiments/ratio_of_freespace/: CMakeLists.txt  main.cpp  run_experiment.py
nvblox/experiments/experiments/realistic_timings/: CMakeLists.txt  compare_platforms.py  gather_timings.py  plot_timings.py
nvblox/experiments/experiments/stream_compaction/: CMakeLists.txt  main.cpp  plot.py  run.py
nvblox/experiments/experiments/texture_vs_global_memory_interpolation/: CMakeLists.txt  main.cpp
nvblox/experiments/experiments/threaded_image_loading/: CMakeLists.txt  main.cpp  plot_comparison.py  run.py
nvblox/experiments/experiments/unified_vs_device_memory/: CMakeLists.txt  analyze_results.py  main.cpp  run.py
nvblox/experiments/experiments/vector_copies/: CMakeLists.txt  main.cpp  plot_timings.py  vector_copies.cu  vector_copies.h
nvblox/experiments/python/: MANIFEST.in  README.md  setup.py
nvblox/experiments/python/nvblox_experiments/: threedmatch.py  timing.py
nvblox/experiments/src/: fuse_3dmatch.cpp  test_bench.cpp
nvblox/include/nvblox/: nvblox.h
nvblox/lint/: format_everything.sh  lint_nvblox_h.sh
nvblox/script/: run_fuse_3dmatch.sh  run_fuse_fusionportable.sh  run_fuse_kitti.sh  run_nvblox_tsdf.sh
nvblox/src/benchmarks/: sphere_benchmark.cpp
nvblox/src/core/: bounding_boxes.cpp  bounding_spheres.cpp  camera.cpp  camera_pinhole.cpp  color.cpp  cuda_stream.cpp  error_check.cu  frustum.cpp  image.cpp  interpolation_3d.cpp  mapper.cpp  parameter_tree.cpp  warmup.cu
nvblox/src/datasets/: image_loader.cpp  parse_3dmatch.cpp
nvblox/src/dynamics/: dynamics_detection.cu
nvblox/src/geometry/: bounding_boxes.cpp  bounding_spheres.cpp
nvblox/src/gpu_hash/: gpu_layer_view.cu  gpu_set.cu
nvblox/src/integrators/: decay_integrator_base.cpp  esdf_integrator.cpp  esdf_integrator.cu  esdf_slicer.cu  freespace_integrator.cu  frustum.cpp  occupancy_decay_integrator.cu  projective_color_integrator.cu  projective_integrator_base.cpp  projective_occupancy_integrator.cu  projective_tsdf_integrator.cu  tsdf_decay_integrator.cu  view_calculator.cpp  view_calculator.cu
nvblox/src/interpolation/: interpolation_3d.cpp
nvblox/src/io/: csv.cpp  image_io.cpp  layer_cake_io.cpp  mesh_io.cpp  ply_writer.cpp  pointcloud_io.cpp
nvblox/src/map/: blox.cu  layer.cu
nvblox/src/mapper/: mapper.cpp  multi_mapper.cpp
nvblox/src/mesh/: marching_cubes.cu  mesh.cpp  mesh_block.cu  mesh_integrator.cpp  mesh_integrator.cu  mesh_integrator_color.cu  mesh_streamer.cpp
nvblox/src/primitives/: primitives.cpp  scene.cpp
nvblox/src/rays/: sphere_tracer.cu
nvblox/src/semantics/: image_masker.cu  image_projector.cu
nvblox/src/sensors/: camera.cpp  color.cpp  connected_components.cpp  depth_preprocessing.cpp  image.cu  npp_image_operations.cpp  pointcloud.cu
nvblox/src/serialization/: layer_type_register.cpp  mesh_serializer.cu  serializer.cpp  sqlite_database.cpp
nvblox/src/utils/: nvtx_ranges.cpp  rates.cpp  timing.cpp
nvblox/tests/: CMakeLists.txt  benchmark.cpp  check_default_stream_utilization.sh  run_memcpy_on_default_cuda_stream.cpp  test_3d_interpolation.cpp  test_3dmatch.cpp  test_blox.cpp  test_bounding_spheres.cpp  test_cake.cpp  test_camera.cpp  test_camera_pinhole.cpp  test_color_image.cpp  test_color_integrator.cpp  test_connected_components.cpp  test_cuda.cu  test_cuda_stream.cpp  test_depth_image.cpp  test_depth_image_preprocessing.cpp  test_dynamics.cpp  test_esdf_integrator.cpp  test_for_memory_leaks.cpp  test_freespace_integrator.cpp  test_frustum.cpp  test_fuser.cpp  test_fuser_rgbd.cpp  test_gpu_layer_view.cpp  test_human_mapper.cpp  test_image_io.cpp  test_image_masker.cpp  test_image_projector.cpp  test_indexing.cpp  test_layer.cpp  test_lidar.cpp  test_lidar_integration.cpp  test_mapper.cpp  test_mesh.cpp  test_mesh_coloring.cpp  test_mesh_serializer.cpp  test_mesh_streamer.cpp  test_multi_mapper.cpp  (+23 more)
nvblox/tests/lib/: esdf_integrator_cpu.cpp  integrator_utils.cpp  projective_tsdf_integrator_cpu.cpp  utils.cpp
nvblox/tests/visualization/: visualize_csv_color_image.py  visualize_csv_depth_image.py  visualize_csv_pointcloud.py
nvblox/visualization/: visualize_mesh.py  visualize_ptcloud.py
(+365 files in other folders)
